Exam, html for add complete

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,6 @@ img {
 #pic {
 
     height: 400px;
-    
     border: dotted;
 }
 
@@ -15,7 +14,24 @@ img {
     float: left;
     border: dotted;
 }
+#header{
+
+    width:600px;
+    border: dotted;
+}
+
+#navigation{
+
+    width:500px;
+    border: dotted;
+}
+
+#content{
+
+    border: dotted;
+}
 
 #footer{
     clear: both;
+    width:550px;
 }
