--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,3 @@
-img {
-    height: 200px;
-}
-
-#pic {
-
-    height: 400px;
-    border: dotted;
-}
-
-#text {
-
-    height: 400px;
-    float: left;
-    border: dotted;
-}
 #header{
 
     width:500px;
@@ -27,11 +11,30 @@ img {
 }
 
 #content{
-
+    width:500px;
     border: dotted;
 }
 
 #footer{
     clear: both;
     width:500px;
+}
+
+img {
+    height: 200px;
+}
+
+#pic {
+
+    height: 400px;
+    border: dotted;
+    width: 50%;
+}
+
+#text {
+
+    height: 400px;
+    width:50%;
+    float: left;
+    border: dotted;
 }
