--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,6 @@
 img {
     width: 25%;
     position: absolute;
-    margin: 0 auto;
 
 }
 
@@ -40,4 +39,10 @@ img {
     width:50%;
     float: left;
     border: dotted;
+}
+
+#form{
+
+    margin: auto;
+
 }
